idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/duplicateActualsExplicit/bottom/bottom.kt
package foo

actual class <!PACKAGE_OR_CLASSIFIER_REDECLARATION("A")!>A<!>
